[package]
name = "axumexample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
tokio = { version = "1", features = ["full"] }
# Single assignment cells and lazy values.
once_cell = "1.10.0"
serde = { version = "~1.0", features = ["derive"] }
serde_derive = { version = "~1.0" }
serde_json = "~1.0"
liquid = "0.21"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"